<resources>
    <!-- App name -->
    <string name="app_name">Step By Step</string>

    <!-- Database name -->
    <string name="database_name">workouts_database</string>

    <!-- Telemetry permissions -->
    <string name="permissions_title">Give consent to the processing of personal data</string>
    <string name="permissions_description">
        This application stores and sends data to our developers to help them improve the user experience
    </string>
    <string name="give_consent">Agree</string>
    <string name="no_consent">Disagree</string>
    <string name="permission_dialog">permission_dialog</string>

    <!-- Firebase metrics -->
    <string name="increment_goals">Increment goals</string>
    <string name="decrement_goals">Decrement goals</string>
    <string name="increment_setting">Increment setting</string>
    <string name="decrement_setting">Decrement setting</string>


    <!-- Firebase traces -->
    <string name="goal_trace">Goal_trace</string>
    <string name="day_trace">Day_trace</string>
    <string name="week_trace">Week_trace</string>
    <string name="month_trace">Month_trace</string>

    <!-- Common formats of data -->
    <string name="time_format">%1$02d:%2$02d:%3$02d</string>
    <string name="distance_format">%1$dm</string>
    <string name="speed_format">%1$.2fm/s</string>
    <string name="hour_format_pattern">%1$02d:%2$02d</string>
    <string name="date_format_pattern">EEE dd MMM yyyy</string>

    <!-- Common buttons -->
    <string name="save">SAVE</string>
    <string name="back_button">BACK</string>
    <string name="delete">DELETE</string>

    <!-- Dialog on MainActivity to ask the user permissions -->
    <string name="show_dialog">Update</string>
    <string name="ignore_dialog">Ignore</string>
    <string name="enable_location">To track your workouts, you need to enable the location setting on your device. Click Update to update it</string>

    <!-- nav_menu -->
    <string name="Activity">Activity</string>
    <string name="Summary">Summary</string>
    <string name="Workouts">Workouts</string>
    <string name="Settings">Settings</string>
    <string name="goalsTitle">Goals</string>

    <!-- Settings fragment -->
    <string name="UserSettings">User Settings</string>
    <string name="settingsDescription">Here you can set up your profile to get a more accurate calculation of your steps taken and calories burned.</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="age">Age</string>
    <string name="crash_message">Controlled crash</string>

    <!-- Goals fragment -->
    <string name="GoalsDescription">Set your daily goals. You can check your progress in the Summary section.
        Remember, if you do multiple activities in a day, they are summed up.</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="distance">Meters</string>
    <string name="zero">0</string>

    <!-- Summary fragment -->
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="all">All</string>

    <!-- Maps fragment strings -->
    <string name="reason_to_update_permissions">The access to the position is required to track your workouts.\nIf you deny it but want to update it later, please go to your device settings</string>
    <string name="go_to_settings">The access to the position is required.</string>
    <string name="request_permission_positive_button">Ask for position</string>
    <string name="position_not_found">Position not found</string>
    <string name="start_workout">Start</string>
    <string name="finish_workout">Finish</string>
    <string name="pause_workout">Pause</string>
    <string name="resume_workout">Resume</string>
    <string name="initial_meters">0m</string>

    <!-- Save workout activity -->
    <string name="save_title">Save workout</string>
    <string name="instructions_to_save">Give a name to the current workout</string>
    <string name="workout_name_default">Workout %1$d</string>
    <string name="workout_time">TIME: %1$s</string> <!-- TODO: volevi senza time? -->
    <string name="workout_distance">DISTANCE: %1$s</string>
    <string name="workout_speed">SPEED: %1$s</string>

    <!-- Notification of service -->
    <string name="channel_id">Workout tracking</string>
    <string name="notification_title">Workout in progress</string>
    <string name="notification_content">Click here to return to Step By Step application</string>
    <string name="notification_channel_name">Workout channel</string>
    <string name="notification_channel_description">The channel where workouts in progress are displayed</string>

    <!-- Workouts descriptions -->
    <string name="meters">Distance</string>
    <string name="speed">Speed</string>
    <string name="workout_title">Workout</string>
    <string name="instructions_workout">Here are the details and the maps of the activities you complete in the Activities section</string>

    <!-- Maps workout info activity -->
    <string name="activity_name">Workout</string>
    <string name="points_not_available">Positions not available</string>

    <!-- Add workouts -->
    <string name="new_workout_title">Add new Workout</string>
    <string name="instructions_to_add_new_workout">Set your personal workout.
        If the date is precedent to the date of the setting of your first goal or your first user settings, the default values will be used</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="duration_tag">durationPicker</string>
    <string name="time_tag">timePicker</string>
    <string name="date_tag">datePicker</string>
    <string name="impossible_to_add_workout">Not all the fields are filled</string>
    <string name="impossible_date">A workout time can\'t be in the future</string>
    <string name="impossible_duration">The duration can\'t be zero</string>
    <string name="initial_duration">00:00:00</string>
    <string name="initial_time">00:00</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>

    <!-- Weekly graph -->
    <string name="wednesday">Wed</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <!-- Images description -->
    <string name="delete_workout">delete workout</string>
    <string name="addButton">addButton</string>
    <string name="subButton">subButton</string>
    <string name="distance_goal">distance goal</string>
    <string name="calories_goal">Calories goal</string>
    <string name="steps_goal">steps goal</string>
    <string name="distance_image">distance image</string>
    <string name="calories_image">calories image</string>
    <string name="steps_image">steps image</string>
    <string name="weight_image">Weight image</string>
    <string name="height_image">Height image</string>
    <string name="age_image">Age image</string>
    <string name="goals_image">goals image</string>
    <string name="speed_image">speed_image</string>
    <string name="time_image">time image</string>
    <string name="workoutImage">WorkoutImage</string>


</resources>