<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.workouts.WorkoutsFragment"
    style="@style/Background">

    <LinearLayout
        android:id = "@+id/layout_title_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/workout_title"
            style="@style/MyTextView"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/WorkoutImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/MyTextView"
            android:layout_marginStart="3dp"
            android:src="@drawable/workout"
            android:contentDescription="@string/workoutImage"/>

    </LinearLayout>


    <ImageButton
        android:id="@+id/addWorkout"
        android:layout_width="27dp"
        android:layout_height="27dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/MyAddSubButtonStyle"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/addButton"
        android:src="@drawable/baseline_add_24" />


    <TextView

        android:id="@+id/workout_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/instructions_workout"
        android:textSize="15sp"
        style="@style/MyTextViewSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_title_workout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_workouts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/big_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_instructions"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_workout_info" />

</androidx.constraintlayout.widget.ConstraintLayout>