<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/finish_activity_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="com.example.room.fragments.maps.FinishWorkoutFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    style="@style/Background">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:id="@+id/time_tv"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/initial_time" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/finish_button"
            android:text="@string/finish_workout"
            app:layout_constraintBottom_toTopOf="@id/pause_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/pause_button"
            android:text="@string/pause_workout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/finish_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/km_tv"
            android:text="@string/initial_km"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="center_vertical"
            />
</LinearLayout>