<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Background">

    <LinearLayout
        android:id = "@+id/layout_titleSaveWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/save_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/new_workout_title"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/MyTextView"/>

        <ImageView
            android:id="@+id/workoutImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:src="@drawable/workout"
            android:contentDescription="@string/workoutImage"
            style="@style/MyTextView"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/back_button_addWorkout"
        android:layout_width="27dp"
        android:layout_height="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        style="@style/MyAddSubButtonStyle"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/addButton"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_new_workout"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@style/MyTextViewSubtitle"
        app:layout_constraintTop_toBottomOf="@id/layout_titleSaveWorkout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/instructions_to_add_new_workout"
        android:textSize="15sp"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/saveWorkoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_new_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/MyMaterialCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:id="@+id/linear_name"
            android:dividerPadding="2.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"
                android:layout_gravity="center_vertical"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:id="@+id/add_name"
                android:layout_margin="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:autofillHints="Activity"
                android:inputType="text"
                android:textSize="25sp"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:id="@+id/linear_distance"
                android:dividerPadding="2.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_name">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/distance"
                    android:layout_gravity="center_vertical"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/add_distance"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:autofillHints="Activity"
                    android:inputType="number"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:id="@+id/linear_time"
                android:dividerPadding="2.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_distance">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/time"
                android:layout_gravity="center_vertical"
                />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    >

                    <NumberPicker
                        android:id="@+id/numpicker_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        />

                    <NumberPicker
                        android:id="@+id/numpicker_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/white"/>

                    <NumberPicker
                        android:id="@+id/numpicker_seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:id="@+id/linear_date"
                android:dividerPadding="2.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_time">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date"
                android:layout_gravity="center_vertical"
                />

                <Button
                    android:id="@+id/add_time_of_day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Time" />

                <Button
                    android:id="@+id/add_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Date" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyButtonStyle"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>