<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/Background"
    android:clickable="true"
    android:focusable="true">

    <ImageButton
        android:id="@+id/delete_workout"
        style="@style/DeleteButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:contentDescription="@string/delete_workout"
        android:src="@drawable/sharp_delete_24"
        android:text="@string/delete" />

    <androidx.fragment.app.FragmentContainerView
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/summary_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        tools:context=".fragments.workouts.MapsWorkoutInfoActivity"
        map:mapType="terrain"
        map:uiCompass="true"
        map:uiZoomControls="true"
        map:uiScrollGestures="true"
        map:uiZoomGestures="true"
        map:uiRotateGestures="true"
        map:uiTiltGestures="false"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/activity_name_summary"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/activity_name"
            app:layout_constraintBottom_toTopOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary_time_tv"
            style="@style/MyTextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_name_summary" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            style="@style/MyButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_name_summary" />

        <TextView
            android:id="@+id/summary_distance_tv"
            style="@style/MyTextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toBottomOf="@id/activity_name_summary" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>